Fix jumping content

--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -13,6 +13,7 @@
 
 .typing-title {
     margin-bottom: 10px;
+    min-height: 68px;
 }
 
 .hero-image {
